grammar.js
    program: ($) =>
      repeat(choice($._statement, $._declaration, $.enum, ";")),

    // --- Declarations ---

    _declaration: ($) =>
      choice(
        $.method,
        $.class,
        $.module,
        $.export_method,
        $.type_alias,
      ),

    method: ($) =>
      method($, choice(
        $.constant,
        $.identifier,
        $.setter_name,
        $.self_method_name,
        $.operator_name,
      )),

    parameters: ($) =>
      prec.dynamic(10, seq(
        "(",
        optional(
          seq(
            $._parameter,
            repeat(seq(",", $._parameter)),
            optional(","),
          ),
        ),
        ")",
      )),

    _parameter: ($) =>
      choice(
        $.typed_parameter,
        $.ivar_parameter,
        $.splat_parameter,
        $.double_splat_parameter,
        $.keyword_separator,
        $.block_parameter,
      ),

    typed_parameter: ($) =>
      seq(
        field("name", choice($.identifier, $.constant)),
        token(prec(3, ":")),
        $.type_annotation,
        optional(seq("=", $._expression)),
      ),

    type_annotation: ($) =>
      seq(
        $._type,
        repeat(seq("|", $._type)),
      ),

    _type: ($) =>
      seq(choice(
        $.type_name,
        $.qualified_type_name,
        $.type_shape,
        $.type_tuple,
      ), optional("?")),

    type_name: ($) =>
      seq(
        choice(
          $.identifier,
          $.constant,
          "nil",
          "type",
        ),
        optional($.type_arguments),
      ),

    return_type: ($) =>
      seq(
        alias($._signature_arrow, "->"),
        $.type_annotation,
      ),

    _statement: ($) =>
      choice($.alias, $._non_alias_statement),

    command_call: ($) =>
      prec.right(seq(
        field("method", choice($.identifier, $.constant, $.member_access)),
        $._command_start,
        field("arguments", $.command_arguments),
        optional($.block),
      )),

    command_arguments: ($) =>
      prec.right(seq(
        $._command_argument,
        repeat(seq(",", $._command_argument)),
      )),

    _command_argument: ($) =>
      choice(
        $._argument,
        $.endless_range,
      ),

    assignment: ($) =>
      prec.right(PREC.ASSIGNMENT, seq(
        choice($.parenthesized_target, $._expression),
        "=",
        $._rhs_expression,
      )),

    _rhs_expression: ($) =>
      choice(
        $._expression,
        $.endless_range,
      ),

    _assignable_member_access: ($) =>
      prec.left(PREC.CALL - 1, seq(
        $._assignable_receiver,
        ".",
        $.identifier,
      )),

    _assignable_subscript: ($) =>
      prec(PREC.CALL, seq(
        $._assignable_receiver,
        alias($._index_open, "["),
        $._expression_or_closed_range,
        repeat(seq(",", $._expression_or_closed_range)),
        "]",
      )),

    splat_target: ($) =>
      seq("*", optional(choice($.identifier, $.constant, alias($._assignable_member_access, $.member_access), alias($._assignable_subscript, $.subscript)))),

    yield: ($) =>
      prec.right(seq(
        "yield",
        optional(choice(
          prec.dynamic(10, seq(choice(alias($._call_open, "("), "("), optional($.argument_list), ")")),
          $.argument_list,
        )),
      )),

    while: ($) =>
      seq(
        "while",
        field("condition", $._expression),
        optional($._body),
        "end",
      ),

    // For-loop variables are block-parameter-style bindings: identifiers,
    // splats, and nested groups only. Member, index, and instance-variable
    // targets are parse errors in the interpreter.
    _expression: ($) =>
      choice(
        $.yield,
        $.command_call,
        $.assignment,
        $.compound_assignment,
        $.ternary,
        $.binary,
        $.unary,
        $.beginless_range,
        $.rescue_modifier,
        $.call,
        $.member_access,
        $.computed_call,
        $.scope_resolution,
        $.subscript,
        $._primary,
      ),

    binary: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "||", $._expression)),
        prec.left(PREC.AND, seq($._expression, "&&", $._expression)),
        prec.left(PREC.EQUALITY, seq($._expression, choice("==", "===", "!=", "=~", "!~"), $._expression)),
        prec.left(PREC.COMPARISON, seq($._expression, choice("<", ">", "<=", ">=", "<=>"), $._expression)),
        prec.left(PREC.RANGE, seq($._expression, choice("..", "..."), $._expression)),
        prec.left(PREC.BIT_AND, seq($._expression, "&", $._expression)),
        prec.left(PREC.SHIFT, seq($._expression, "<<", $._expression)),
        prec.left(PREC.ADDITIVE, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(PREC.MULTIPLICATIVE, seq($._expression, choice(alias($._multiply, "*"), alias($._divide, "/"), "/", "//", "%"), $._expression)),
        prec.right(PREC.POWER, seq($._expression, "**", $._expression)),
      ),

    // Dynamic -1: when GLR can read `expr .. expr` either as one binary range
    // or as `expr` followed by a beginless-range statement, the binary range
    // wins.
    call: ($) =>
      prec.right(PREC.CALL, choice(
        seq(
          field("receiver", optional(seq($._expression, choice(".", "&.")))),
          field("method", choice($.identifier, $.constant)),
          alias($._call_open, "("),
          optional($.argument_list),
          ")",
          optional($.block),
        ),
        seq(
          field("receiver", optional(seq($._expression, choice(".", "&.")))),
          field("method", choice($.identifier, $.constant)),
          $.block,
        ),
      )),

    block: ($) =>
      seq($._block_open, optional($.block_parameters), optional($._body), "}"),

    block_parameters: ($) =>
      seq(
        "|",
        optional(seq($._block_parameter,
          repeat(seq(",", $._block_parameter)))),
        "|",
      ),

    _block_parameter: ($) =>
      choice(
        $.identifier,
        $.constant,
        $.typed_parameter,
        $.destructured_parameter,
      ),

    // Destructured block parameters: { |(head, *)| ... }. Splats live
    // only inside groups, matching the interpreter.
    destructured_parameter: ($) =>
      choice(
        seq("(", $._destructured_parameter_element, repeat(seq(",", $._destructured_parameter_element)), ")"),
        seq("[", $._destructured_parameter_element, repeat(seq(",", $._destructured_parameter_element)), "]"),
      ),

    _destructured_parameter_element: ($) =>
      choice(
        $.identifier,
        $.constant,
        $.typed_parameter,
        $.splat_target,
        $.splat_parameter,
        $.destructured_parameter,
      ),

    argument_list: ($) =>
      seq(
        $._paren_argument,
        repeat(seq(",", $._paren_argument)),
        optional(","),
      ),

    _paren_argument: ($) =>
      choice(
        $._argument,
        alias($._endless_range_closed, $.endless_range),
      ),

    _body: ($) =>
      repeat1(choice($._non_alias_statement, $.class, $.method, ";")),

    // --- Terminals ---

    identifier: (_$) =>
      new RegExp(UNICODE.identifier, "u"),

    integer: (_$) =>
      token(choice(
        /0[xX][0-9a-fA-F](_?[0-9a-fA-F])*/,
        /0[bB][01](_?[01])*/,
        /0[oO][0-7](_?[0-7])*/,
        /0[dD][0-9](_?[0-9])*/,
        /\d(_?\d)*/,
      )),

    // An exponent marker makes the literal a float even without a decimal
    // point (1e3 is 1000.0), matching the interpreter.
