test/corpus/blocks.txt
================
Block with parameters
================

values.each { |value|
  total = total + value
}

---

(program
  (call
    receiver: (identifier)
    method: (identifier)
    (block
      (block_parameters
        (identifier))
      (assignment
        (identifier)
        (binary
          (identifier)
          (identifier))))))

================
Block with call and parameters
================

values.reduce(0) { |running_total, value|
  running_total + value
}

---

(program
  (call
    receiver: (identifier)
    method: (identifier)
    (argument_list
      (integer))
    (block
      (block_parameters
        (identifier)
        (identifier))
      (binary
        (identifier)
        (identifier)))))

================
Yield
================

def twice
  yield
  yield
end

---

(program
  (method
    name: (identifier)
    (yield
      (argument_list
        (yield)))))

================
Yield with arguments
================

def times(n: any)
  i = 0
  while i < n
    yield(i)
    i = i + 1
  end
end

---

(program
  (method
    name: (identifier)
    (parameters
      (typed_parameter
        name: (identifier)
        (type_annotation
          (type_name
            (identifier)))))
    (assignment
      (identifier)
      (integer))
    (while
      condition: (binary
        (identifier)
        (identifier))
      (yield
        (argument_list
          (identifier)))
      (assignment
        (identifier)
        (binary
          (identifier)
          (integer))))))

================
Destructured block parameters
================

items.each { |(id, score)|
  puts id
}

pairs.map { |(head, *), index|
  head
}

---

(program
  (call
    receiver: (identifier)
    method: (identifier)
    (block
      (block_parameters
        (destructured_parameter
          (identifier)
          (identifier)))
      (command_call
        method: (identifier)
        arguments: (command_arguments
          (identifier)))))
  (call
    receiver: (identifier)
    method: (identifier)
    (block
      (block_parameters
        (destructured_parameter
          (identifier)
          (splat_target))
        (identifier))
      (identifier))))

================
Typed synchronous block parameters
================

values.map { |x: int| x + 1 }

---

(program
  (call
    (identifier)
    (identifier)
    (block
      (block_parameters
        (typed_parameter
          (identifier)
          (type_annotation
            (type_name
              (identifier)))))
      (binary
        (identifier)
        (integer)))))

================
Named function return annotation
================

def foo -> int
  1
end

---

(program
  (method
    (identifier)
    (return_type
      (type_annotation
        (type_name
          (identifier))))
    (integer)))
